添加google的核验代码

--- a/themes/yilia/layout/_partial/head.ejs
+++ b/themes/yilia/layout/_partial/head.ejs
@@ -19,6 +19,7 @@
     title = 'Tag: ' + page.tag;
   }
   %>
+  <script data-ad-client="ca-pub-4227528017030286" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <link rel="dns-prefetch" href="<%= config.url %>">
